# MetaboCore

./: .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  README.md  pyproject.toml
docs/00_identidad/: glosario.md  nucleo_conceptual.md  principios_clinicos.md
docs/01_flujo_consulta/: entrevista_motivacional_operativa.md  primera_consulta.md  seguimiento.md
docs/02_formatos/: analisis_corporal.md  entrevista_motivacional.md  ficha_inicial.md  historia_metabolica_dirigida.md  historia_peso_tratamientos_previos.md  objetivos_y_plan.md
docs/03_capa_nom/: mapeo_nom_004.md
docs/04_decisiones/: ADR-0001-metabocore-como-nucleo-independiente.md  ADR-0002-flujo-antes-que-expediente.md  ADR-0003-nom-como-capa-documental.md  ADR-0004-nom-004-como-referencia-activa.md  ADR-0005-formatos-clinicos-con-schemas-json.md  ADR-0006-django-como-visor-de-formatos.md  ADR-0007-metabocore-como-generador-de-formatos-imprimibles.md  ADR-0008-visor-de-flujo-de-consulta.md
docs/05_guias_clinicas/: README.md  entrevista_motivacional_metabocare.md
metabocore_app/: manage.py
metabocore_app/config/: settings.py  urls.py  wsgi.py
metabocore_app/form_viewer/: flow_loaders.py  flow_renderers.py  loaders.py  renderers.py  tests.py  urls.py  views.py
schemas/: README.md
schemas/examples/: entrevista_motivacional.example.json  ficha_inicial.example.json  historia_metabolica_dirigida.example.json
schemas/flows/: primera_consulta.flow.json  seguimiento.flow.json
schemas/forms/: entrevista_motivacional.schema.json  ficha_inicial.schema.json  historia_metabolica_dirigida.schema.json
(+22 files in other folders)
