[project]
name = "metabocore"
version = "0.1.0"
description = "Nucleo clinico-operativo de MetaboCare con visor Django de formatos clinicos."
requires-python = ">=3.11"
dependencies = [
  "Django>=5.0,<6.0",
  "jsonschema>=4.0,<5.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = []
